# local-doc-search-mcp

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  pytest.ini
mcp_server/: model.py  server.py
prepare_chroma_persist_db/: crawl_doc_and_generate_markdown.ipynb  dbt_docs.ipynb
tests/: conftest.py  test_integration.py  test_model.py  test_server.py
